--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "pixi-filters": "^6.1.5",
     "pixi.js": "^8.15.0"
   }
