Add PostHog analytics

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
     "pixi-filters": "^6.1.5",
-    "pixi.js": "^8.15.0"
+    "pixi.js": "^8.15.0",
+    "posthog-js": "^1.326.0"
   }
 }
