Richer Discord reports and bot routing

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ VITE_PUBLIC_POSTHOG_KEY=phc_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # DO NOT put your real webhook URL in tracked files.
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/...
 
+# Optional: where suspected bot traffic should be sent.
+DISCORD_BOT_WEBHOOK_URL=https://discord.com/api/webhooks/...
+
 # Optional: comma-separated allowlist for `Origin`/`Referer` hosts (extra protection).
 # Example: trevorrosato.vercel.app,colgate-room-portfolio-xxxx.vercel.app
 REPORT_ALLOWED_HOSTS=
