Add first-party analytics dashboard

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,22 @@
+## Client (Vite)
 VITE_PUBLIC_POSTHOG_KEY=phc_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 
-# Server-only: used by `api/report.ts` to send visit notifications to Discord.
-# DO NOT put your real webhook URL in tracked files.
-DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/...
+## Server (Vercel functions)
+# Postgres connection string (Vercel Postgres or any Postgres provider)
+DATABASE_URL=postgres://user:password@host:5432/db
 
-# Optional: where suspected bot traffic should be sent.
-DISCORD_BOT_WEBHOOK_URL=https://discord.com/api/webhooks/...
+# Protects `/api/admin/*` endpoints (use a long random value)
+ADMIN_TOKEN=change-me
+
+# Optional: enrich non-bot IPs (cached). Leave blank to skip enrichment.
+IPINFO_TOKEN=
 
 # Optional: comma-separated allowlist for `Origin`/`Referer` hosts (extra protection).
 # Example: trevorrosato.vercel.app,colgate-room-portfolio-xxxx.vercel.app
 REPORT_ALLOWED_HOSTS=
+
+## Optional: legacy Discord reporting (only if `api/report.ts` is used)
+# DO NOT put your real webhook URL in tracked files.
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/...
+DISCORD_BOT_WEBHOOK_URL=https://discord.com/api/webhooks/...
