--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 VITE_PUBLIC_POSTHOG_KEY=phc_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 
+# First-party tracker (client)
+VITE_TRACKER_ENDPOINT=/api/collect
+VITE_TRACKER_PERSIST=localStorage
+
 ## Server (Vercel functions)
 # Postgres connection string (Vercel Postgres or any Postgres provider)
 DATABASE_URL=postgres://user:password@host:5432/db
@@ -11,6 +15,9 @@ ADMIN_TOKEN=change-me
 
 # Optional: enrich non-bot IPs (cached). Leave blank to skip enrichment.
 IPINFO_TOKEN=
+
+# Optional: adjust bot sensitivity (default 6)
+BOT_SCORE_THRESHOLD=6
 
 # Optional: comma-separated allowlist for `Origin`/`Referer` hosts (extra protection).
 # Example: trevorrosato.vercel.app,colgate-room-portfolio-xxxx.vercel.app
