--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@vercel/analytics": "^1.6.1",
     "pg": "^8.17.1",
     "pixi-filters": "^6.1.5",
