Remove dossier server from portfolio

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ VITE_PUBLIC_POSTHOG_KEY=phc_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 
 # Dossier tracker (optional)
-# For a separate Dossier deployment, set to a full URL like https://dossier.example.com/api/collect
-VITE_TRACKER_ENDPOINT=/api/collect
+# Set to your Dossier deployment URL, e.g. https://dossier.example.com/api/collect
+VITE_TRACKER_ENDPOINT=
 VITE_TRACKER_PERSIST=localStorage
