--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,6 @@ VITE_PUBLIC_POSTHOG_KEY=phc_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 
 # Dossier tracker (optional)
-# Set to your Dossier deployment URL, e.g. https://dossier.example.com/api/collect
-VITE_TRACKER_ENDPOINT=
+# Set to "off" to disable tracking in a given environment.
+VITE_TRACKER_ENDPOINT=/api/collect
 VITE_TRACKER_PERSIST=localStorage
