--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,28 @@
 VITE_PUBLIC_POSTHOG_KEY=phc_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 VITE_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
 
-# Dossier tracker (optional)
+# Dossier tracker (client)
 # Set to "off" to disable tracking in a given environment.
 VITE_TRACKER_ENDPOINT=/api/collect
 VITE_TRACKER_PERSIST=localStorage
+
+## Server (Vercel functions)
+# Postgres connection string (Vercel Postgres or any Postgres provider)
+DATABASE_URL=postgres://user:password@host:5432/db
+
+# Protects `/api/admin/*` endpoints (use a long random value)
+ADMIN_TOKEN=change-me
+
+# Optional: enrich non-bot IPs (cached). Leave blank to skip enrichment.
+IPINFO_TOKEN=
+
+# Optional: adjust bot sensitivity (default 6)
+BOT_SCORE_THRESHOLD=6
+
+# Optional: comma-separated allowlist for `Origin`/`Referer` hosts (extra protection).
+REPORT_ALLOWED_HOSTS=
+
+# Optional: legacy Discord reporting (only if `api/report.ts` is used)
+# DO NOT put your real webhook URL in tracked files.
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/...
+DISCORD_BOT_WEBHOOK_URL=https://discord.com/api/webhooks/...
