fix(vercel): collapse admin endpoints into single function

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "rewrites": [
     {
+      "source": "/api/admin/:path*",
+      "destination": "/api/admin?route=:path*"
+    },
+    {
       "source": "/_i/:path*",
       "destination": "https://us.i.posthog.com/:path*"
     }
